💚 style: update pre-commit config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,49 +1,34 @@
-# Pre-commit hooks
+# Project-wide configuration file, can be used for package metadata and other tool configurations
+# Example usage: global configuration for PEP8 (via flake8) setting or default pytest arguments
+# Local usage: pip install pre-commit, pre-commit run --all-files
 
-default_language_version:
-  python: python3.10
+[isort]
+# https://pycqa.github.io/isort/docs/configuration/options.html
+line_length = 100
+# see: https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
+multi_line_output = 0
+include_trailing_comma = True
 
-# Define bot property if installed via https://github.com/marketplace/pre-commit-ci
-ci:
-  autofix_prs: true
-  autofix_commit_msg: '🎨 [pre-commit.ci] auto fixes from pre-commit hooks'
-  autoupdate_commit_msg: '⬆️ [pre-commit.ci] pre-commit autoupdate'
-  autoupdate_schedule: monthly
-
-repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-      - id: check-case-conflict
-      - id: check-json
-      - id: check-yaml
-      - id: check-docstring-first
-      - id: trailing-whitespace
-      - id: pretty-format-json
-        args: [--autofix, --indent=4, --no-ensure-ascii, --no-sort-keys]
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.10.1
-    hooks:
-      - id: pyupgrade
-        name: Upgrade code
-        args: [ --py37-plus ]
-
-  - repo: https://github.com/psf/black
-    rev: 23.7.0
-    hooks:
-      - id: black
-        name: PEP8 formatting
-        args: [ --skip-string-normalization, --line-length=100]
-
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        name: I-sort imports
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.1.0
-    hooks:
-      - id: flake8
-        name: PEP8 checker
+[flake8]
+# https://flake8.pycqa.org/en/latest/user/options.html
+max-line-length = 100
+max-complexity = 20
+verbose = 2
+format = pylint
+# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
+# see: https://www.flake8rules.com/
+select = B, C, E, F, W
+ignore = C101, C407, C408, E402, E731, E741, W503
+    # C101: Coding magic comment not found
+    # C407: Unnecessary <dict/list> comprehension - <builtin> can take a generator
+    # C408: Unnecessary <dict/list/tuple> call - rewrite as a literal
+    # E402: module level import not at top of file
+    # E731: Do not assign a lambda expression, use a def
+    # E741: Do not use variables named 'I', 'O', or 'l'
+    # W503:	Line break occurred before a binary operator
+per-file-ignores =
+  **/__init__.py: E402, F401, F403, F405
+    # E402: module level import not at top of file
+    # F401: module imported but unused
+    # F403: ‘from module import *’ used; unable to detect undefined names
+    # F405:	Name may be undefined, or defined from star imports: module
