--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,18 +6,25 @@ default_language_version:
 # Define bot property if installed via https://github.com/marketplace/pre-commit-ci
 ci:
   autofix_prs: true
-  autofix_commit_msg: '🎨 [pre-commit.ci] auto fixes from pre-commit hooks'
-  autoupdate_commit_msg: '⬆️ [pre-commit.ci] pre-commit autoupdate'
+  autofix_commit_msg: '🎨 style: [pre-commit.ci] auto fixes from pre-commit.com hooks'
+  autoupdate_commit_msg: '💚 ci: [pre-commit.ci] pre-commit autoupdate'
   autoupdate_schedule: monthly
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
+      - id: check-added-large-files
       - id: check-case-conflict
+      - id: check-docstring-first
       - id: check-json
       - id: check-yaml
-      - id: check-docstring-first
+      - id: detect-aws-credentials
+        args: [--allow-missing-credentials]
+      - id: detect-private-key
+      - id: double-quote-string-fixer
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
       - id: trailing-whitespace
       - id: pretty-format-json
         args: [--autofix, --indent=4, --no-ensure-ascii, --no-sort-keys]
@@ -27,7 +34,7 @@ repos:
     hooks:
       - id: pyupgrade
         name: Upgrade code
-        args: [ --py37-plus ]
+        args: [ --py310-plus ]
 
   - repo: https://github.com/psf/black
     rev: 24.3.0
@@ -42,8 +49,21 @@ repos:
       - id: isort
         name: I-sort imports
 
+  - repo: https://github.com/PyCQA/autoflake
+    rev: v2.3.1
+    hooks:
+    - id: autoflake
+      name: Autoflake - remove unused imports/variables
+      args: [
+        --in-place,
+        --remove-all-unused-imports,
+        --remove-unused-variables,
+        --ignore-init-module-imports,
+        --ignore-pass-after-docstring,
+      ]
+
   - repo: https://github.com/PyCQA/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
-        name: PEP8 checker
+        name: Flake8 check
