💚 feat: replace flake, isort, etc. with ruff

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,33 +2,69 @@
 # Example usage: global configuration for PEP8 (via flake8) setting or default pytest arguments
 # Local usage: pip install pre-commit, pre-commit run --all-files
 
-[isort]
-# https://pycqa.github.io/isort/docs/configuration/options.html
-line_length = 100
-# see: https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
-multi_line_output = 0
-include_trailing_comma = True
-
-[flake8]
-# https://flake8.pycqa.org/en/latest/user/options.html
-max-line-length = 100
-max-complexity = 20
-verbose = 2
-format = pylint
-# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
-# see: https://www.flake8rules.com/
-select = B, C, E, F, W
-ignore = C101, C407, C408, E402, E731, E741, W503
-    # C101: Coding magic comment not found
-    # C407: Unnecessary <dict/list> comprehension - <builtin> can take a generator
-    # C408: Unnecessary <dict/list/tuple> call - rewrite as a literal
-    # E402: module level import not at top of file
+[ruff]
+# https://docs.astral.sh/ruff/configuration/
+line-length = 100
+indent-width = 4
+# see: https://docs.astral.sh/ruff/rules
+select =
+     F # Pyflakes
+     E # Pycodestyle
+     W # Pycodestyle
+     C90 # McCabe
+     I # Isort
+     UP # PyUpgrade
+     B # Flake8-bugbear
+     C4 # Flake8-comprehensions
+ignore = C407, C408, E402, E731, E741, W503
+    # E402: Module level import not at top of file
     # E731: Do not assign a lambda expression, use a def
     # E741: Do not use variables named 'I', 'O', or 'l'
-    # W503:	Line break occurred before a binary operator
+    # W503: Line break occurred before a binary operator
+    # C408: Unnecessary <dict/list/tuple> call - rewrite as a literal
+fixable = ["ALL"]
+unfixable = ["F401"]
+     # F401: module imported but unused
+[ruff.lint]
 per-file-ignores =
-  **/__init__.py: E402, F401, F403, F405
-    # E402: module level import not at top of file
-    # F401: module imported but unused
-    # F403: ‘from module import *’ used; unable to detect undefined names
-    # F405:	Name may be undefined, or defined from star imports: module
+     **/__init__.py: E402, F401, F403, F405
+          # E402: Module level import not at top of file
+          # F401: Module imported but unused
+          # F403: ‘from module import *’ used; unable to detect undefined names
+          # F405: Name may be undefined, or defined from star imports: module
+[ruff.format]
+quote-style = "single"
+indent-style = "tab"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+
+# [isort]
+# # https://pycqa.github.io/isort/docs/configuration/options.html
+# line_length = 100
+# # see: https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
+# multi_line_output = 0
+# include_trailing_comma = True
+
+# [flake8]
+# # https://flake8.pycqa.org/en/latest/user/options.html
+# max-line-length = 100
+# max-complexity = 20
+# verbose = 2
+# format = pylint
+# # https://pep8.readthedocs.io/en/latest/intro.html#error-codes
+# # see: https://www.flake8rules.com/
+# select = B, C, E, F, W
+# ignore = C101, C407, C408, E402, E731, E741, W503
+#      # C101: Coding magic comment not found
+#      # C407: Unnecessary <dict/list> comprehension - <builtin> can take a generator
+#      # C408: Unnecessary <dict/list/tuple> call - rewrite as a literal
+#      # E402: Module level import not at top of file
+#      # E731: Do not assign a lambda expression, use a def
+#      # E741: Do not use variables named 'I', 'O', or 'l'
+#      # W503: Line break occurred before a binary operator
+# per-file-ignores =
+     # **/__init__.py: E402, F401, F403, F405
+     #      # E402: Module level import not at top of file
+     #      # F401: Module imported but unused
+     #      # F403: ‘from module import *’ used; unable to detect undefined names
+     #      # F405: Name may be undefined, or defined from star imports: module
