--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # Pre-commit hooks
 
 default_language_version:
-  python: python3.10
+  python: python3
 
 # Define bot property if installed via https://github.com/marketplace/pre-commit-ci
 ci:
@@ -29,41 +29,64 @@ repos:
       - id: pretty-format-json
         args: [--autofix, --indent=4, --no-ensure-ascii, --no-sort-keys]
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.2
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.11.2"
     hooks:
-      - id: pyupgrade
-        name: Upgrade code
-        args: [ --py310-plus ]
+      - id: mypy
+        args: ["--strict", "--ignore-missing-imports"]
 
-  - repo: https://github.com/psf/black
-    rev: 24.4.2
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.6.6
     hooks:
-      - id: black
-        name: PEP8 formatting
-        args: [ --skip-string-normalization, --line-length=100]
+      # Run the linter
+      - id: ruff
+        types_or: [ python, pyi ]
+        args: [ --fix ]
 
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-        name: I-sort imports
+      # Run the formatter
+      - id: ruff-format
+        types_or: [ python, pyi ]
 
-  - repo: https://github.com/PyCQA/autoflake
-    rev: v2.3.1
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.4
     hooks:
-    - id: autoflake
-      name: Autoflake - remove unused imports/variables
-      args: [
-        --in-place,
-        --remove-all-unused-imports,
-        --remove-unused-variables,
-        --ignore-init-module-imports,
-        --ignore-pass-after-docstring,
-      ]
+      - id: codespell
 
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
-        name: Flake8 check
+  # - repo: https://github.com/asottile/pyupgrade
+  #   rev: v3.15.2
+  #   hooks:
+  #     - id: pyupgrade
+  #       name: Upgrade code
+  #       args: [ --py310-plus ]
+
+  # - repo: https://github.com/psf/black
+  #   rev: 24.4.2
+  #   hooks:
+  #     - id: black
+  #       name: PEP8 formatting
+  #       args: [ --skip-string-normalization, --line-length=100]
+
+  # - repo: https://github.com/PyCQA/isort
+  #   rev: 5.13.2
+  #   hooks:
+  #     - id: isort
+  #       name: I-sort imports
+
+  # - repo: https://github.com/PyCQA/autoflake
+  #   rev: v2.3.1
+  #   hooks:
+  #   - id: autoflake
+  #     name: Autoflake - remove unused imports/variables
+  #     args: [
+  #       --in-place,
+  #       --remove-all-unused-imports,
+  #       --remove-unused-variables,
+  #       --ignore-init-module-imports,
+  #       --ignore-pass-after-docstring,
+  #     ]
+
+  # - repo: https://github.com/PyCQA/flake8
+  #   rev: 7.0.0
+  #   hooks:
+  #     - id: flake8
+  #       name: Flake8 check
